<resources>
    <string name="app_name">Billboard</string>
    <string name="title_activity_detail_movie">Detail Movie</string>
    <string name="title_activity_detail_tvshow">Detail Tv Show</string>
    <string name="movie">Movie</string>
    <string name="tv_show">Tv Show</string>
    <string name="image_view_for_poster">image view for poster</string>
    <string name="rating_star">rating star</string>
    <string name="error_icon">error icon</string>
    <string name="error">Oops! something went wrong.</string>
    <string name="try_again">Please try again later.</string>
    <string name="app_logo">app logo</string>
    <string name="seasons">Seasons</string>
    <string name="episodes">Episodes</string>
    <string name="runtime">Runtime</string>
    <string name="release_date">Release date</string>
    <string name="first_air_date">First air date</string>
    <string name="last_air_date">Last air date</string>
    <string name="share_text">I recommend you to watch %1$s</string>
    <string name="error_message">Oops, something went wrong!</string>
    <string name="button_for_accessing_favorite">button for accessing favorite</string>
    <string name="favorite">Favorite</string>
    <string name="favorite_button">Favorite button</string>
</resources>