<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardBackgroundColor="@color/colorDarkWhite"
    tools:context=".ui.view.activity.MovieDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/activity_detail_movie_cv_postercontainer"
                android:layout_width="180dp"
                android:layout_height="270dp"
                android:layout_margin="12dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="6dp">

                <ImageView
                    android:id="@+id/activity_detail_movie_iv_poster"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/image_view_for_poster"
                    android:scaleType="centerCrop" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="12dp"
                android:paddingEnd="12dp">

                <TextView
                    android:id="@+id/activity_detail_movie_tv_title"
                    style="@style/CodeFontBold"
                    android:layout_marginVertical="12dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        app:cardCornerRadius="4dp"
                        app:cardElevation="4dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="4dp">

                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:contentDescription="@string/rating_star"
                                android:src="@drawable/ic_star" />

                            <TextView
                                android:id="@+id/activity_detail_movie_tv_rating"
                                style="@style/CodeFontRegular"
                                android:layout_gravity="center"
                                android:layout_marginStart="4dp" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:backgroundTint="@color/colorAccent"
                        app:cardCornerRadius="4dp"
                        app:cardElevation="4dp">

                        <ImageButton
                            android:id="@+id/activity_detail_movie_ib_share"
                            android:layout_width="28dp"
                            android:layout_height="28dp"
                            android:background="@android:color/transparent"
                            android:scaleType="fitXY"
                            app:srcCompat="@drawable/ic_share" />

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <TextView
                    style="@style/CodeFontRegular"
                    android:layout_marginTop="12dp"
                    android:text="@string/release_date" />

                <TextView
                    android:id="@+id/activity_detail_movie_tv_releasedate"
                    style="@style/CodeFontLight"
                    android:layout_margin="4dp" />

                <TextView
                    style="@style/CodeFontRegular"
                    android:layout_marginTop="8dp"
                    android:text="@string/runtime" />

                <TextView
                    android:id="@+id/activity_detail_movie_tv_runtime"
                    style="@style/CodeFontLight"
                    android:layout_margin="4dp" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/activity_detail_movie_tv_genre"
            style="@style/CodeFontLight"
            android:layout_marginHorizontal="12dp"
            android:ellipsize="end"
            android:maxLines="2" />

        <TextView
            android:id="@+id/activity_detail_movie_tv_overview"
            style="@style/CodeFontRegular"
            android:layout_marginHorizontal="12dp"
            android:layout_marginVertical="8dp" />

    </LinearLayout>


</RelativeLayout>
