<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardBackgroundColor="@color/colorDarkWhite"
    tools:context="com.example.jetpackprosubmission.view.activity.TvShowDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/activity_detail_tvshow_cv_postercontainer"
                android:layout_width="200dp"
                android:layout_height="300dp"
                android:layout_margin="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="6dp">

                <ImageView
                    android:id="@+id/activity_detail_tvshow_iv_poster"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/loading_decor"
                    android:contentDescription="@string/image_view_for_poster"
                    android:scaleType="centerCrop" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="12dp"
                android:paddingEnd="12dp">

                <TextView
                    android:id="@+id/activity_detail_tvshow_tv_title"
                    style="@style/CodeFontBold"
                    android:layout_margin="8dp"
                    android:ellipsize="end"
                    android:maxLines="8" />

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:contentDescription="@string/rating_star"
                            android:src="@drawable/ic_ratestar" />

                        <TextView
                            android:id="@+id/activity_detail_tvshow_tv_rating"
                            style="@style/CodeFontRegular"
                            android:layout_width="32dp"
                            android:layout_gravity="center" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/activity_detail_tvshow_tv_firstairdate"
                    style="@style/CodeFontLight"
                    android:layout_margin="4dp" />

                <TextView
                    android:id="@+id/activity_detail_tvshow_tv_lastairdate"
                    style="@style/CodeFontLight"
                    android:layout_margin="4dp" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/activity_detail_tvshow_tv_genre"
            style="@style/CodeFontLight"
            android:layout_marginHorizontal="16dp"
            android:ellipsize="end"
            android:maxLines="2" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/CodeFontRegular"
                        android:gravity="center"
                        android:text="@string/seasons" />

                    <TextView
                        android:id="@+id/activity_detail_tvshow_tv_seasons"
                        style="@style/CodeFontBold"
                        android:gravity="center"
                        android:textSize="40sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        style="@style/CodeFontRegular"
                        android:gravity="center"
                        android:text="@string/episodes" />

                    <TextView
                        android:id="@+id/activity_detail_tvshow_tv_episodes"
                        style="@style/CodeFontBold"
                        android:gravity="center"
                        android:textSize="40sp" />

                </LinearLayout>

            </LinearLayout>


        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/activity_detail_tvshow_tv_overview"
            style="@style/CodeFontRegular"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp" />

    </LinearLayout>

    <include
        android:id="@+id/activity_detail_tvshow_progressBar_layout"
        layout="@layout/progressbar_layout" />

    <include
        android:id="@+id/activity_detail_tvshow_warning_layout"
        layout="@layout/error_warning_layout" />

</RelativeLayout>
